# UMA

./: .gitignore  README.md  build_windows.ps1  pyproject.toml  requirements.txt  run_uma.py
docs/superpowers/specs/: 2026-07-07-uma-minimal-daw-design.md
tests/: test_dsp.py  test_engine.py  test_io.py  test_model.py  test_peaks.py  test_viewport.py
tools/: smoke_gui.py
uma/: __main__.py  dsp.py  engine.py  io_audio.py  model.py  peaks.py
uma/ui/: export_dialog.py  main_window.py  peak_worker.py  track_row.py  viewport.py  waveform_lane.py
