[project]
name = "uma"
version = "0.1.0"
description = "Minimal DAW to merge synchronous multitrack WAV/FLAC recordings into a stereo mix"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "soundfile>=0.12",
    "sounddevice>=0.4",
    "lameenc>=1.7",
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
uma = "uma.__main__:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["uma", "uma.ui"]
